# rust-template

./: CONTRIBUTING.md  README.md  cargo-generate.toml
.github/workflows/: build.yml
clap_gitversion/: Cargo.toml  build.rs
clap_gitversion/.github/workflows/: audit.yml  cd.yml
clap_gitversion/src/: main.rs
clap_gitversion_ws/: .gitignore  Cargo.toml
clap_gitversion_ws/.github/workflows/: cd.yml
clap_gitversion_ws/crates/cli/: Cargo.toml
clap_gitversion_ws/crates/cli/src/: cli_app.rs  lib.rs  logging.rs  versions.rs
clap_gitversion_ws/crates/cli/src/cli_app/: subcommand1.rs
clap_gitversion_ws/src/: main.rs
src/: lib.rs
src/cli_app/: subcommand1.rs
template/: cargo-generate.toml
template/src/: cli_app.rs
