[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", default-features = false }
clap = { version = "4.5.8", features = [
  "derive",
  "std",
], default-features = true }
log = "0.4.22"
once_cell = { default-features = false, version = "1.19.0", features = ["std"] }
serde = { version = "1.0.203", default-features = false, features = [
  "serde_derive",
] }
serde_json = "1.0.120"
simplelog = "0.12.2"
time = { version = "0.3.36", default-features = false }

[build-dependencies]
gitversion_build = "0.1.1"
